mysql 설정, jpa 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/myWeather
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root1234
 
+# jpa
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+
+# api key
+openweathermap.key=2c81f47f84ec3eb9a014ad27338aafb1
